feat(moon): add project dependencies to ensure vite config builds first
- Add dependsOn configuration to packages that use @monochromatic-dev/config-vite
- Ensures proper build order so vite config is built before dependent packages
- Fixes build failures when packages try to use vite config before it's built
- Added dependencies to: root project, config-eslint, module-es, css-variables figma plugin

--- a/moon.yml
+++ b/moon.yml
@@ -2,6 +2,9 @@ $schema: 'https://moonrepo.dev/schemas/project.json'
 
 language: 'typescript'
 
+dependsOn:
+  - 'vite'
+
 tasks:
   # Template for lint/format tasks
   _lintFormatBase:
