--- a/packages/module/es/moon.yml
+++ b/packages/module/es/moon.yml
@@ -1,6 +1,9 @@
 $schema: 'https://moonrepo.dev/schemas/project.json'
 language: 'typescript'
 
+dependsOn:
+  - 'vite'
+
 tags:
 - 'dualBuildsNodeBrowser'
 - package
