fix(moon): add task dependency to ensure vite config builds before js_default task
- Add vite:js dependency to js_default task in shared tasks configuration
- Ensures vite config package is built before any package tries to use it during build
- Fixes 'Failed to resolve entry for package @monochromatic-dev/config-vite' errors

--- a/.moon/tasks.yml
+++ b/.moon/tasks.yml
@@ -50,6 +50,8 @@ tasks:
 
   js_default:
     command: 'vite build --config vite.config.ts --mode production'
+    deps:
+      - 'vite:js'
     options:
       outputStyle: 'buffer-only-failure'
 
