Disable more moon cache

--- a/.moon/tasks.yml
+++ b/.moon/tasks.yml
@@ -3,6 +3,7 @@ $schema: 'https://moonrepo.dev/schemas/tasks.json'
 implicitInputs:
 - '@group(configs)'
 - '@group(sources)'
+- '/.prototools'
 
 fileGroups:
   configs:
