revert header fix. going to put header in real reverse proxy

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,6 @@
 :80 {
-  root * /srv/packages/site/exa-search/dist/final/js
+  # DOCS: Put header in your end reverse proxy.
 
+  root * /srv/packages/site/exa-search/dist/final/js
   file_server
 }
