--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     environment:
       NODE_ENV: production
     restart: unless-stopped
+    volumes:
+      - pnpm-store:/root/.local/share/pnpm/store/v10
     healthcheck:
       test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://localhost/']
       interval: 30s
@@ -22,3 +24,6 @@ services:
       - "coolify.managed=true"
       - "coolify.type=application"
       - "coolify.name=exa-search"
+
+volumes:
+  pnpm-store:
