fix(moon): Use non-deprecated file group `dist`

--- a/.moon/tasks/tag-astro.yml
+++ b/.moon/tasks/tag-astro.yml
@@ -5,7 +5,7 @@ tasks:
     command: 'astro build'
     # Note: @group(sources) and @group(configs) are implicit inputs
     outputs:
-    - '@group(distAstro)'
+    - '@group(dist)'
     options:
       internal: false
   jsWatch:
