--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -110,13 +110,13 @@ catalog:
   serialize-error: '*'
   '@fxts/core': '*'
   '@typescript-eslint/types': '*'
-  vitest: '>=4.0.0-beta.2'
+  vitest: '>=4.0.0-beta.4'
   vue-tsc: '>=2.2.10'
-  '@vitest/browser': '>=4.0.0-beta.2'
+  '@vitest/browser': '>=4.0.0-beta.4'
   playwright: '>=1.52.0'
-  '@vitest/coverage-v8': '>=4.0.0-beta.2'
-  '@vitest/ui': '>=4.0.0-beta.2'
-  '@vitest/coverage-istanbul': '>=4.0.0-beta.2'
+  '@vitest/coverage-v8': '>=4.0.0-beta.4'
+  '@vitest/ui': '>=4.0.0-beta.4'
+  '@vitest/coverage-istanbul': '>=4.0.0-beta.4'
   '@total-typescript/ts-reset': '*'
   '@types/postcss-mixins': '*'
   '@typescript-eslint/eslint-plugin': '*'
@@ -141,7 +141,7 @@ catalog:
   eslint-plugin-astro: '>=1.3.1'
   eslint-plugin-jsx-a11y: '>=6.10.2'
   '@eslint/core': '*'
-  '@eslint/plugin-kit': '*'
+  '@eslint/plugin-kit': '>=0.3.4'
   '@moonrepo/cli': '>=1.36.3'
   sugarss: '*'
   '@types/node': ^24.0.10
