feat(module-es): add simpleMemoize function and reorganize utility modules
- Add function.simpleMemoize for basic memoization without options
- Split any.test.ts into any.unit.test.ts for better organization
- Add string.log utility for formatted logging
- Update memoize function to use simpleMemoize internally
- Enhance tryCatch with better error handling and test coverage
- Update various moon scripts and configurations
- Improve TypeScript and ESLint configurations
- Update Vite coverage reporter and test exclusions
- Clean up imports and exports in index.ts

--- a/moon.yml
+++ b/moon.yml
@@ -285,6 +285,7 @@ tasks:
     options:
       # Aggregator of cache-disabled test tasks
       cache: false
+      internal: false
 
   # Browser test runner
   testBrowser:
@@ -295,6 +296,7 @@ tasks:
       # 2. Filesystem-intensive with large input/output sets
       # 3. Moon's cache overhead exceeds test execution time
       cache: false
+      internal: false
 
   testBrowserWatch:
     command: 'vitest watch --config vitest.browser.config.ts'
@@ -309,6 +311,7 @@ tasks:
       # 2. Filesystem-intensive with large input/output sets
       # 3. Moon's cache overhead exceeds test execution time
       cache: false
+      internal: false
 
   testUnitWatch:
     command: 'vitest watch --config vitest.unit.config.ts'
