feat(module-es): add ReplicatingStore and string storage utilities
Introduce ReplicatingStore for consensus-based multi-backend storage with self-healing capabilities. Add comprehensive string storage implementations including Web Storage, OPFS, IndexedDB, and filesystem backends. Include cycle detection utilities and array range generators.

BREAKING CHANGE: Removed simpleMemoize export from main module entry point

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -52,6 +52,11 @@
     "import/no-anonymous-default-export": "off",
     "typescript/triple-slash-reference": "off",
 
+    // Named functions are mandatory.
+    // UPSTREAM: oxc currently doesn't support `allowDestructuring` parameter for this rule. Temporarily turned off.
+    // "typescript/no-this-alias": ["error", { "allowDestructuring": true }],
+    "typescript/no-this-alias": "off",
+
     //endregion correctness
 
     //region Restriction
