feat(module-es): enhance array type utilities and add letter arrays with comprehensive tests
- Improve `isArrayOfLength1` to accept any input type
- Extend `IsArrayFixedLength` type utility to handle non-array inputs
- Add runtime arrays for lowercase and uppercase letters with full test coverage
- Reorganize imports in `iterable.chunks.ts` for better clarity
- Update multiple unit tests with trailing commas for consistency

test(module-es): achieve 100% coverage for array type guards and letter utilities

- Add comprehensive test cases for array type utilities
- Include type-level tests for tuple and fixed-length array types
- Verify runtime behavior of letter arrays
- Ensure proper type inference and narrowing

chore: disable remark-lint rule for mixed case filenames

- Allow mixed case filenames to support TODO.feature.md naming convention
- Update .remarkrc.yml configuration

docs: add AI auto-commit automation specification

- Define comprehensive plan for intelligent auto-commit system
- Include file watching, debouncing, and AI message generation
- Specify integration requirements and success metrics

--- a/.remarkrc.yml
+++ b/.remarkrc.yml
@@ -105,7 +105,10 @@ plugins:
 - remark-lint-no-file-name-articles
 - remark-lint-no-file-name-consecutive-dashes
 - remark-lint-no-file-name-irregular-characters
-- remark-lint-no-file-name-mixed-case
+
+# USER: Turned off in all presets because I frequently write TODO.feature.md
+# - remark-lint-no-file-name-mixed-case
+
 - remark-lint-no-file-name-outer-dashes
 - - remark-lint-no-heading-punctuation
   - ':.'
