feat(module-es): add iterable pick utilities with schema validation support
Implement iterablePick and iterablePickAsync functions that allow picking and validating elements from iterables using exact shape matching or schema validation. Supports both sync and async iterables with comprehensive test coverage.

Includes:
- Generic schema interface support
- Deep equality comparison for exact shapes
- Mixed array validation with schemas
- Full async iterable support
- Comprehensive unit tests

BREAKING CHANGE: iterable.partition test import path changed from .js to module root

--- a/packages/module/es/package.json
+++ b/packages/module/es/package.json
@@ -89,7 +89,8 @@
     "decircular": "catalog:"
   },
   "dependencies": {
-    "meilisearch": "catalog:"
+    "meilisearch": "catalog:",
+    "zod": "catalog:"
   },
   "version": "0.0.125",
   "repository": {
