feat(module-es): implement t typeof runtime type discriminator
Add safe-stringify dependency for error message serialization
Implement runtime type discriminator function that returns detailed type information
Extend discriminated union type to include 'symbol' primitive type
Handle bigint, boolean, function types with detailed metadata
Use Object.prototype.toString for precise function type detection

--- a/packages/module/es/package.json
+++ b/packages/module/es/package.json
@@ -86,7 +86,8 @@
     "find-up": "catalog:",
     "@cspotcode/outdent": "catalog:",
     "superjson": "catalog:",
-    "decircular": "catalog:"
+    "decircular": "catalog:",
+    "safe-stringify": "catalog:"
   },
   "dependencies": {
     "meilisearch": "catalog:",
