--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,129 +4,131 @@ packages:
 autoInstallPeers: false
 
 catalog:
-  browserslist: '*'
-  zod: 3.25.71
-  dprint: '*'
-  esbuild: '*'
+  browserslist: '>=4.26.0'
+  zod: '>=3.25.71'
+  dprint: '>=0.50.1'
+  esbuild: '>=0.25.9'
   oxlint: '>=1.1.0'
-  stylelint: '*'
-  stylelint-config-standard: '*'
-  typescript: '>=5.9.1'
-  '@ungap/structured-clone': '*'
-  find-up: '*'
-  glob: '*'
-  tinyglobby: '*'
-  oxc-resolver: '*'
-  eslint-plugin-tsdoc: '*'
-  exa-js: '*'
-  smol-toml: '*'
-  zod-opts: '*'
-  '@typescript-eslint/parser': '*'
+  stylelint: '>=16.24.0'
+  stylelint-config-standard: '>=39.0.0'
+  typescript: '>=5.9.2'
+  '@ungap/structured-clone': '>=1.3.0'
+  find-up: '>=7.0.0'
+  glob: '>=11.0.1'
+  tinyglobby: '>=0.2.12'
+  oxc-resolver: '>=4.1.2'
+  eslint-plugin-tsdoc: '>=0.4.0'
+  exa-js: '>=1.9.3'
+  smol-toml: '>=1.3.3'
+  zod-opts: '>=0.2.1'
+  '@typescript-eslint/parser': '>=8.43.0'
   '@kazupon/gunshi': jsr:*
-  '@types/bun': '*'
-  postcss-html: '*'
-  '@types/mdx': '*'
-  vite: 'npm:rolldown-vite@>=7.0.12'
-  vite-plugin-singlefile: '*'
-  '@csstools/postcss-color-function': '*'
-  '@csstools/postcss-color-mix-function': '*'
-  '@csstools/postcss-contrast-color-function': '*'
-  '@csstools/postcss-remove': '*'
-  '@csstools/postcss-gradients-interpolation-method': '*'
-  '@csstools/postcss-light-dark-function': '*'
-  '@csstools/postcss-oklab-function': '*'
-  '@csstools/postcss-relative-color-syntax': '*'
-  '@csstools/custom-units': '*'
-  postcss-calc: '*'
-  postcss-color-functional-notation: '*'
-  postcss-color-hex-alpha: '*'
-  postcss-convert-values: '*'
-  postcss-custom-properties: '*'
-  postcss-custom-media: '*'
-  postcss-custom-selectors: '*'
-  postcss-discard-comments: '*'
-  postcss-discard-duplicates: '*'
-  postcss-discard-empty: '*'
-  postcss-discard-overridden: '*'
-  postcss-discard-unused: '*'
-  postcss-merge-idents: '*'
-  postcss-merge-longhand: '*'
-  postcss-merge-rules: '*'
-  postcss-minify-font-values: '*'
-  postcss-minify-gradients: '*'
-  postcss-minify-params: '*'
-  postcss-minify-selectors: '*'
-  postcss-mixins: '*'
-  postcss-nesting: '*'
-  postcss-normalize-charset: '*'
+  '@types/bun': '>=1.2.5'
+  postcss-html: '>=1.7.0'
+  '@types/mdx': '>=2.0.13'
+  vite: 'npm:rolldown-vite@>=7.1.9'
+  vite-plugin-singlefile: '>=2.3.0'
+  '@csstools/postcss-color-function': '>=4.0.9'
+  '@csstools/postcss-color-mix-function': '>=3.0.11'
+  '@csstools/postcss-contrast-color-function': '>=1.0.14'
+  '@csstools/postcss-remove': '>=2.0.0'
+  '@csstools/postcss-gradients-interpolation-method': '>=5.0.4'
+  '@csstools/postcss-light-dark-function': '>=2.0.7'
+  '@csstools/postcss-oklab-function': '>=4.0.9'
+  '@csstools/postcss-relative-color-syntax': '>=3.0.11'
+  '@csstools/custom-units': '>=0.1.1'
+  postcss-calc: '>=10.1.1'
+  '@optique/core': 'jsr:*'
+  '@optique/run': 'jsr:*'
+  postcss-color-functional-notation: '>=7.0.10'
+  postcss-color-hex-alpha: '>=10.0.0'
+  postcss-convert-values: '>=7.0.0'
+  postcss-custom-properties: '>=14.0.6'
+  postcss-custom-media: '>=11.0.6'
+  postcss-custom-selectors: '>=8.0.5'
+  postcss-discard-comments: '>=7.0.0'
+  postcss-discard-duplicates: '>=7.0.2'
+  postcss-discard-empty: '>=7.0.0'
+  postcss-discard-overridden: '>=7.0.1'
+  postcss-discard-unused: '>=7.0.1'
+  postcss-merge-idents: '>=7.0.0'
+  postcss-merge-longhand: '>=7.0.1'
+  postcss-merge-rules: '>=7.0.1'
+  postcss-minify-font-values: '>=7.0.1'
+  postcss-minify-gradients: '>=7.0.0'
+  postcss-minify-params: '>=7.0.4'
+  postcss-minify-selectors: '>=7.0.1'
+  postcss-mixins: '>=10.0.1'
+  postcss-nesting: '>=13.0.1'
+  postcss-normalize-charset: '>=7.0.0'
   postcss-normalize-display-values: '*'
   postcss-normalize-positions: '*'
   postcss-normalize-repeat-style: '*'
   postcss-normalize-string: '*'
-  postcss-normalize-timing-functions: '*'
-  postcss-normalize-unicode: '*'
-  postcss-normalize-url: '*'
-  postcss-normalize-whitespace: '*'
-  minimatch: '*'
-  postcss-ordered-values: '*'
+  postcss-normalize-timing-functions: '>=7.0.0'
+  postcss-normalize-unicode: '>=7.0.0'
+  postcss-normalize-url: '>=7.0.0'
+  postcss-normalize-whitespace: '>=7.0.0'
+  minimatch: '>=10.0.1'
+  postcss-ordered-values: '>=7.0.0'
   '@csstools/css-tokenizer': '>=3.0.3'
-  '@figma/plugin-typings': '*'
-  lfi: '*'
-  lightningcss: '*'
+  '@figma/plugin-typings': '>=1.100.0'
+  lfi: '>=4.1.1'
+  lightningcss: '>=1.29.2'
   postcss: '>=8.5.5'
   '@logtape/logtape': jsr:>=0.9.2
   '@logtape/file': jsr:>=0.9.2
-  type-fest: '*'
+  type-fest: '>=4.40.1'
   execa: '>=9.5.3'
-  nano-spawn: '*'
-  astro: '*'
-  meilisearch: '*'
-  '@astrojs/mdx': '*'
+  nano-spawn: '>=0.2.0'
+  astro: '>=5.3.1'
+  meilisearch: '>=0.45.0'
+  '@astrojs/mdx': '>=4.0.7'
   '@astrojs/rss': '*'
   '@shikijs/transformers': '>=3.3.0'
-  '@vitejs/plugin-basic-ssl': '*'
-  unified: '*'
-  to-vfile: '*'
-  rolldown-vite: '>=7.0.11'
-  remark-github-blockquote-alert: '*'
-  remark-sectionize: '*'
-  rehype-stringify: '*'
-  rehype-slug-custom-id: '*'
-  rehype-preset-minify: '*'
-  rehype-parse: '*'
-  rehype-autolink-headings: '*'
-  rambdax: '*'
+  '@vitejs/plugin-basic-ssl': '>=1.3.0'
+  unified: '>=11.0.5'
+  to-vfile: '>=8.0.0'
+  rolldown-vite: '>=7.1.9'
+  remark-github-blockquote-alert: '>=0.0.8'
+  remark-sectionize: '>=2.0.0'
+  rehype-stringify: '>=10.0.1'
+  rehype-slug-custom-id: '>=2.0.0'
+  rehype-preset-minify: '>=7.0.1'
+  rehype-parse: '>=9.0.1'
+  rehype-autolink-headings: '>=7.1.0'
+  rambdax: '>=9.4.0'
   'safe-stringify': '>=1.2.0'
-  ses: '*'
-  superjson: '*'
-  decircular: '*'
+  ses: '>=1.12.2'
+  superjson: '>=2.2.2'
+  decircular: '>=1.0.0'
   '@openrouter/ai-sdk-provider': '*'
   '@mastra/core': '*'
-  openapi-types: '*'
-  react: '*'
-  the-new-css-reset: '*'
+  openapi-types: '>=12.1.3'
+  react: '>=18.3.1'
+  the-new-css-reset: '>=1.11.3'
   TODS: github:clagnut/TODS
-  '@mdx-js/vue': '*'
+  '@mdx-js/vue': '>=1.1.7'
   '@typescript-eslint/utils': '*'
-  vue: '*'
+  vue: '>=3.5.13'
   '@cspotcode/outdent': jsr:*
-  '@typescript-eslint/scope-manager': '*'
-  serialize-error: '*'
-  '@fxts/core': '*'
-  '@typescript-eslint/types': '*'
-  vitest: '>=4.0.0-beta.8'
+  '@typescript-eslint/scope-manager': '>=8.43.0'
+  serialize-error: '>=11.0.3'
+  '@fxts/core': '>=0.29.0'
+  '@typescript-eslint/types': '>=8.43.0'
+  vitest: '>=4.0.0-beta.11'
   vue-tsc: '>=2.2.10'
-  '@vitest/browser': '>=4.0.0-beta.8'
+  '@vitest/browser': '>=4.0.0-beta.11'
   playwright: '>=1.52.0'
-  '@vitest/coverage-v8': '>=4.0.0-beta.8'
-  '@vitest/ui': '>=4.0.0-beta.8'
-  '@vitest/coverage-istanbul': '>=4.0.0-beta.8'
-  '@total-typescript/ts-reset': '*'
-  '@types/postcss-mixins': '*'
-  '@typescript-eslint/eslint-plugin': '*'
-  '@elysiajs/static': '*'
-  ts-pattern: '*'
-  oxc-minify: '*'
+  '@vitest/coverage-v8': '>=4.0.0-beta.11'
+  '@vitest/ui': '>=4.0.0-beta.11'
+  '@vitest/coverage-istanbul': '>=4.0.0-beta.11'
+  '@total-typescript/ts-reset': '>=0.6.1'
+  '@types/postcss-mixins': '>=9.0.6'
+  '@typescript-eslint/eslint-plugin': '>=8.43.0'
+  '@elysiajs/static': '>=1.3.0'
+  ts-pattern: '>=5.8.0'
+  oxc-minify: '>=0.1.1'
   mdx2vast: '*'
   memfs: '>=4.17.2'
   happy-opfs: '>=1.8.6'
@@ -137,89 +139,89 @@ catalog:
   '@eslint/js': '>=9.29.0'
   typescript-eslint: '>=8.32.1'
   vite-plugin-json5: '>=1.1.9'
-  happy-rusty: '*'
+  happy-rusty: '>=1.4.2'
   eslint-plugin-jsdoc: '>=50.6.17'
   eslint-plugin-n: '>=17.18.0'
   '@vitest/eslint-plugin': '>=1.2.1'
-  eslint-plugin-unicorn: '>=59.0.1'
-  feedsmith: '*'
-  istanbul-lib-report: '*'
+  eslint-plugin-unicorn: '>=60.0.0'
+  feedsmith: '>=0.2.0'
+  istanbul-lib-report: '>=3.0.1'
   eslint-plugin-astro: '>=1.3.1'
   eslint-plugin-jsx-a11y: '>=6.10.2'
-  '@eslint/core': '*'
+  '@eslint/core': '>=0.12.0'
   '@eslint/plugin-kit': '>=0.3.4'
   '@moonrepo/cli': '>=1.36.3'
-  sugarss: '*'
-  '@types/node': ^24.0.10
-  rollup: '*'
-  elysia: '*'
+  sugarss: '>=5.0.1'
+  '@types/node': '>=24.3.3'
+  rollup: '>=4.49.0'
+  elysia: '>=1.3.21'
   file-type: '>=20.0.0'
-  '@aws-crypto/sha256-js': '*'
-  '@typers/react': '*'
-  '@elysiajs/swagger': '*'
-  ai: '*'
-  '@ai-sdk/react': '*'
-  'swr': '*'
-  'use-sync-external-store': '*'
-  remark-cli: '*'
-  remark-lint-blockquote-indentation: '*'
-  remark-lint-checkbox-character-style: '*'
-  remark-lint-code-block-style: '*'
-  remark-lint-definition-case: '*'
-  remark-lint-definition-spacing: '*'
-  remark-lint-emphasis-marker: '*'
-  remark-lint-fenced-code-flag: '*'
-  remark-lint-fenced-code-marker: '*'
-  remark-lint-file-extension: '*'
-  remark-lint-final-definition: '*'
-  remark-lint-final-newline: '*'
-  remark-lint-hard-break-spaces: '*'
-  remark-lint-heading-increment: '*'
-  remark-lint-heading-style: '*'
-  remark-lint-link-title-style: '*'
-  remark-lint-list-item-bullet-indent: '*'
-  remark-lint-list-item-content-indent: '*'
-  remark-lint-list-item-indent: '*'
-  remark-lint-list-item-spacing: '*'
-  remark-lint-maximum-heading-length: '*'
-  remark-lint-maximum-line-length: '*'
-  remark-lint-no-blockquote-without-marker: '*'
-  remark-lint-no-consecutive-blank-lines: '*'
-  remark-lint-no-duplicate-definitions: '*'
-  remark-lint-no-duplicate-headings: '*'
-  remark-lint-no-emphasis-as-heading: '*'
-  remark-lint-no-file-name-articles: '*'
-  remark-lint-no-file-name-consecutive-dashes: '*'
-  remark-lint-no-file-name-irregular-characters: '*'
-  remark-lint-no-file-name-mixed-case: '*'
-  remark-lint-no-file-name-outer-dashes: '*'
-  remark-lint-no-heading-content-indent: '*'
-  remark-lint-no-heading-punctuation: '*'
-  remark-lint-no-literal-urls: '*'
-  remark-lint-no-multiple-toplevel-headings: '*'
-  remark-lint-no-shell-dollars: '*'
-  remark-lint-no-shortcut-reference-image: '*'
-  remark-lint-no-shortcut-reference-link: '*'
-  remark-lint-no-table-indentation: '*'
-  remark-lint-no-undefined-references: '*'
-  remark-lint-no-unused-definitions: '*'
-  remark-lint-ordered-list-marker-style: '*'
-  remark-lint-ordered-list-marker-value: '*'
-  remark-lint-rule-style: '*'
-  remark-lint-strong-marker: '*'
-  remark-lint-table-cell-padding: '*'
-  remark-lint-table-pipe-alignment: '*'
-  remark-lint-table-pipes: '*'
-  remark-lint-unordered-list-marker-style: '*'
-  '@anthropic-ai/sdk': '*'
-  socket: '*'
-  '@vue/runtime-dom': '*'
-  '@vue/server-renderer': '*'
-  'preact': '*'
-  'preact-render-to-string': '*'
-  'happy-dom': "*"
-  'chokidar': '*'
-  'watcher': '*'
+  '@aws-crypto/sha256-js': '>=5.2.0'
+  '@typers/react': '>=18.3.18'
+  '@elysiajs/swagger': '>=1.3.1'
+  ai: '>=5.0.42'
+  '@ai-sdk/react': '>=1.2.5'
+  'swr': '>=2.3.6'
+  'use-sync-external-store': '>=1.5.0'
+  remark-cli: '>=12.0.1'
+  remark-lint-blockquote-indentation: '>=4.0.1'
+  remark-lint-checkbox-character-style: '>=4.1.1'
+  remark-lint-code-block-style: '>=4.0.1'
+  remark-lint-definition-case: '>=4.0.1'
+  remark-lint-definition-spacing: '>=4.0.1'
+  remark-lint-emphasis-marker: '>=4.0.1'
+  remark-lint-fenced-code-flag: '>=4.2.0'
+  remark-lint-fenced-code-marker: '>=4.0.1'
+  remark-lint-file-extension: '>=3.0.1'
+  remark-lint-final-definition: '>=4.0.2'
+  remark-lint-final-newline: '>=3.0.1'
+  remark-lint-hard-break-spaces: '>=4.1.1'
+  remark-lint-heading-increment: '>=4.0.1'
+  remark-lint-heading-style: '>=4.0.1'
+  remark-lint-link-title-style: '>=4.0.1'
+  remark-lint-list-item-bullet-indent: '>=4.0.0'
+  remark-lint-list-item-content-indent: '>=4.0.0'
+  remark-lint-list-item-indent: '>=4.0.0'
+  remark-lint-list-item-spacing: '>=4.0.0'
+  remark-lint-maximum-heading-length: '>=3.0.0'
+  remark-lint-maximum-line-length: '>=3.0.0'
+  remark-lint-no-blockquote-without-marker: '>=4.0.0'
+  remark-lint-no-consecutive-blank-lines: '>=3.0.0'
+  remark-lint-no-duplicate-definitions: '>=3.0.0'
+  remark-lint-no-duplicate-headings: '>=3.0.0'
+  remark-lint-no-emphasis-as-heading: '>=3.0.0'
+  remark-lint-no-file-name-articles: '>=3.0.0'
+  remark-lint-no-file-name-consecutive-dashes: '>=3.0.0'
+  remark-lint-no-file-name-irregular-characters: '>=3.0.0'
+  remark-lint-no-file-name-mixed-case: '>=3.0.0'
+  remark-lint-no-file-name-outer-dashes: '>=3.0.0'
+  remark-lint-no-heading-content-indent: '>=4.0.0'
+  remark-lint-no-heading-punctuation: '>=3.0.0'
+  remark-lint-no-literal-urls: '>=3.0.0'
+  remark-lint-no-multiple-toplevel-headings: '>=3.0.0'
+  remark-lint-no-shell-dollars: '>=3.0.0'
+  remark-lint-no-shortcut-reference-image: '>=3.0.0'
+  remark-lint-no-shortcut-reference-link: '>=3.0.0'
+  remark-lint-no-table-indentation: '>=4.0.0'
+  remark-lint-no-undefined-references: '>=4.0.0'
+  remark-lint-no-unused-definitions: '>=3.0.0'
+  remark-lint-ordered-list-marker-style: '>=3.0.0'
+  remark-lint-ordered-list-marker-value: '>=3.0.0'
+  remark-lint-rule-style: '>=3.0.0'
+  remark-lint-strong-marker: '>=3.0.0'
+  remark-lint-table-cell-padding: '>=4.0.0'
+  remark-lint-table-pipe-alignment: '>=3.0.0'
+  remark-lint-table-pipes: '>=4.0.0'
+  remark-lint-unordered-list-marker-style: '>=3.0.0'
+  '@anthropic-ai/sdk': '>=0.62.0'
+  socket: '>=1.1.9'
+  '@vue/runtime-dom': '>=3.4.27'
+  '@vue/server-renderer': '>=3.4.27'
+  'preact': '>=10.27.2'
+  'preact-render-to-string': '>=6.5.13'
+  'happy-dom': '>=18.0.1'
+  'chokidar': '>=4.0.3'
+  'watcher': '>=2.3.1'
 
 catalogMode: strict
 
