chore(vitest): migrate to @vitest/browser-playwright and update configurations
deps: migrate browser testing provider
- Replace @vitest/browser with @vitest/browser-playwright across workspace
- Update TypeScript types configuration
- Import playwright provider function in Vite config

feat(lint): add comprehensive oxlint configuration
- Create .oxlintrc.jsonc with 300+ linting rules
- Configure categories, plugins, environment settings
- Add file-specific overrides for tests, Astro, and fixtures

refactor(vitest): optimize test execution
- Switch pool to 'vmThreads' for better test isolation
- Set maxWorkers to 16 for parallel execution
- Update browser provider to use playwright() function
- Remove unused poolOptions and minify configuration

chore(config): cleanup configuration files
- Remove Codanna configuration (.codanna/settings.toml)
- Convert dprint.json to dprint.jsonc with simplified extends
- Comment out oxlint from .prototools (requires Node.js)

Signed-off-by: Aquaticat <an@aquati.cat>

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "vitest": "catalog:",
     "vite": "catalog:",
     "@vitest/coverage-v8": "catalog:",
-    "@vitest/browser": "catalog:",
+    "@vitest/browser-playwright": "catalog:",
     "@vitest/ui": "catalog:",
     "playwright": "catalog:",
     "vue-tsc": "catalog:",
