--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -26,7 +26,7 @@
     "@monochromatic-dev/config-typescript": "workspace:*",
     "@monochromatic-dev/config-vite": "workspace:*",
     "@types/bun": "catalog:",
-    "@vitest/browser": "catalog:"
+    "@vitest/browser-playwright": "catalog:"
   },
   "type": "module",
   "files": [
