--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,10 +8,11 @@ catalog:
   zod: 'jsr:@zod/zod@>=4.1.8'
   dprint: '>=0.50.1'
   esbuild: '>=0.25.9'
-  oxlint: '>=1.15.0'
+  oxlint: '>=1.24.0'
+  oxlint-tsgolint: '*'
   stylelint: '>=16.24.0'
   stylelint-config-standard: '>=39.0.0'
-  typescript: '>=5.9.2'
+  typescript: '>=5.9.3'
   '@ungap/structured-clone': '>=1.3.0'
   find-up: '>=7.0.0'
   glob: '>=11.0.1'
@@ -116,13 +117,13 @@ catalog:
   serialize-error: '>=11.0.3'
   '@fxts/core': '>=0.29.0'
   '@typescript-eslint/types': '>=8.43.0'
-  vitest: '>=4.0.0-beta.11'
+  vitest: '>=4.0.1'
   vue-tsc: '>=2.2.10'
-  '@vitest/browser': '>=4.0.0-beta.11'
+  '@vitest/browser-playwright': '>=4.0.0'
   playwright: '>=1.52.0'
-  '@vitest/coverage-v8': '>=4.0.0-beta.11'
-  '@vitest/ui': '>=4.0.0-beta.11'
-  '@vitest/coverage-istanbul': '>=4.0.0-beta.11'
+  '@vitest/coverage-v8': '>=4.0.0'
+  '@vitest/ui': '>=4.0.0'
+  '@vitest/coverage-istanbul': '>=4.0.0'
   '@total-typescript/ts-reset': '>=0.6.1'
   '@types/postcss-mixins': '>=9.0.6'
   '@typescript-eslint/eslint-plugin': '>=8.43.0'
@@ -267,7 +268,7 @@ packageExtensions:
   vitest:
     dependencies:
       strip-literal: '>=3.0.0'
-  '@vitest/browser':
+  '@vitest/browser-playwright':
     peerDependencies:
       vite: '*'
   stylelint:
