chore(*): clean up documentation and formatting
Removes redundant tool-specific documentation references in multiple agent rule files.
Updates TypeScript config by removing outdated @vitest/browser-playwright import following Vitest migration.
Cleans up formatting inconsistencies in documentation (whitespace around operators, missing newlines).
Updates restructure plan with consistent formatting.

Signed-off-by: Aquaticat <an@aquati.cat>

--- a/packages/config/typescript/tsconfig.options.json
+++ b/packages/config/typescript/tsconfig.options.json
@@ -48,8 +48,9 @@
     "resolveJsonModule": true,
     "types": [
       "bun",
-      "vite/client",
-      "@vitest/browser-playwright"
+      "vite/client"
+      // No longer needed, see https://vitest.dev/blog/vitest-4.html#browser-mode-is-stable
+      // "@vitest/browser-playwright"
     ],
 
     //endregion
