refactor(config-eslint): migrate to native TypeScript configuration
ESLint now natively supports TypeScript config files, eliminating build requirements.

config-eslint: remove build process
- Export source TypeScript files directly via package.json
- Remove Vite build configuration and dual build tags
- Eliminate intermediate build outputs and type generation

config-eslint: adopt native ESLint types
- Replace typescript-eslint FlatConfig with ESLint Linter types
- Use @eslint/config-helpers for defineConfig and globalIgnores
- Add proper type annotations to astro parser and plugin
- Improve type safety throughout configuration

config-eslint: restructure for clarity
- Split monolithic config into named, focused objects
- Separate global options, test options, and oxlint rules
- Replace tseslint.config wrapper with explicit config array

test(module-es): enhance generator function tests
- Rewrite async generator tests with proper async/await handling
- Add comprehensive edge case coverage (empty iterables, large arrays, Maps, Sets)
- Improve test structure with consistent naming patterns
- Add type-level assertions for better type safety validation

docs(*): update testing documentation
- Remove deprecated logtape setup from test examples
- Document improved test structure: describe($, () => test('name', ({expect}) => ...))
- Add language identifiers to code blocks for proper syntax highlighting
- Standardize examples across AGENT.md, AGENTS.md, CLAUDE.md, CRUSH.md

build: configure for native TypeScript support
- Enable vitest plugin in oxlintrc for test-specific linting
- Update moon lintEslint task to use pnpx eslint directly
- Add @eslint/config-helpers to catalog with packageExtensions workaround

chore: document upstream dependency issues
- Create TODO.dependencies.md for tracking needed contributions
- Document @eslint/config-helpers missing eslint peer dependency

Signed-off-by: Aquaticat <an@aquati.cat>

--- a/.oxlintrc.jsonc
+++ b/.oxlintrc.jsonc
@@ -35,7 +35,9 @@
     //    "jsdoc",
 
     "promise",
-    "node"
+    "node",
+    "vitest",
+    
     // oxlint currently can't lint jsx in non-jsx files. See https://oxc.rs/docs/guide/usage/linter/config#specifying-files-to-process
     // "react",
   ],
