--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -128,6 +128,7 @@ catalog:
   '@types/postcss-mixins': '>=9.0.6'
   '@typescript-eslint/eslint-plugin': '>=8.43.0'
   '@elysiajs/static': '>=1.3.0'
+  '@eslint/config-helpers': '*'
   ts-pattern: '>=5.8.0'
   oxc-minify: '>=0.1.1'
   mdx2vast: '*'
@@ -265,6 +266,9 @@ overrides:
   vue: 'catalog:'
 
 packageExtensions:
+  '@eslint/config-helpers':
+    peerDependencies:
+      eslint: '*'
   vitest:
     dependencies:
       strip-literal: '>=3.0.0'
