--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nano-spawn": "catalog:",
     "execa": "catalog:",
     "eslint": "catalog:",
+    "oxlint": "catalog:",
     "@monochromatic-dev/config-eslint": "workspace:*",
     "remark-cli": "catalog:",
     "remark-lint-blockquote-indentation": "catalog:",
