--- a/packages/module/es/package.json
+++ b/packages/module/es/package.json
@@ -52,7 +52,8 @@
     "@cspotcode/outdent": "catalog:",
     "superjson": "catalog:",
     "decircular": "catalog:",
-    "safe-stringify": "catalog:"
+    "safe-stringify": "catalog:",
+    "@types/bun": "catalog:"
   },
   "dependencies": {
     "meilisearch": "catalog:",
