--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -179,7 +179,7 @@
     "eslint/no-magic-numbers": [
       "warn",
       {
-        "ignore": [1, -1, 0, 2, -2, 255, 0.1, 10],
+        "ignore": [1, -1, 0, 2, -2, 255, 0.1, 10, "0n", "1n", "2n", "-1n", "-2n"],
         "enforceConst": true,
         "detectObjects": false,
         "ignoreEnums": true,
