--- a/.remarkrc.yml
+++ b/.remarkrc.yml
@@ -100,7 +100,10 @@ plugins:
   - 80
 - remark-lint-no-blockquote-without-marker
 - remark-lint-no-consecutive-blank-lines
-- remark-lint-no-duplicate-headings
+
+# USER: Disabled in all presets because it's unavoidable.
+# - remark-lint-no-duplicate-headings
+
 - remark-lint-no-emphasis-as-heading
 - remark-lint-no-file-name-articles
 - remark-lint-no-file-name-consecutive-dashes
